@@ -1310,7 +1310,7 @@ answer_query(struct nsd *nsd, struct query *q)
 }
 
 void
-query_prepare_response(query_type *q, nsd_type *nsd)
+query_prepare_response(query_type *q)
 {
 	uint16_t flags;
 
@@ -1325,9 +1325,6 @@ query_prepare_response(query_type *q, nsd_type *nsd)
 	 */
 	q->reserved_space = edns_reserved_space(&q->edns);
 	q->reserved_space += tsig_reserved_space(&q->tsig);
-	if(q->edns.nsid == 1 && nsd->nsid_len > 0 &&
-		q->edns.status != EDNS_NOT_PRESENT)
-		q->reserved_space += OPT_HDR + nsd->nsid_len;
 
 	/* Update the flags.  */
 	flags = FLAGS(q->packet);
@@ -1427,7 +1424,7 @@ query_process(query_type *q, nsd_type *nsd)
 	}
 	/* See if there is an OPT RR. */
 	if (arcount > 0) {
-		if (edns_parse_record(&q->edns, q->packet))
+		if (edns_parse_record(&q->edns, q->packet, q, nsd))
 			--arcount;
 	}
 	/* See if there is a TSIG RR. */
@@ -1466,7 +1463,7 @@ query_process(query_type *q, nsd_type *nsd)
 		return query_error(q, NSD_RC_OK);
 	}
 
-	query_prepare_response(q, nsd);
+	query_prepare_response(q);
 
 	if (q->qclass != CLASS_IN && q->qclass != CLASS_ANY) {
 		if (q->qclass == CLASS_CH) {
@@ -1505,17 +1502,20 @@ query_add_optional(query_type *q, nsd_type *nsd)
 		if (q->edns.dnssec_ok)	edns->ok[7] = 0x80;
 		else			edns->ok[7] = 0x00;
 		buffer_write(q->packet, edns->ok, OPT_LEN);
-		if (nsd->nsid_len > 0 && q->edns.nsid == 1 && buffer_available(
-			q->packet, OPT_RDATA+OPT_HDR+nsd->nsid_len)) {
-			/* rdata length */
-			buffer_write(q->packet, edns->rdata_nsid, OPT_RDATA);
-			/* nsid opt header */
-			buffer_write(q->packet, edns->nsid, OPT_HDR);
-			/* nsid payload */
-			buffer_write(q->packet, nsd->nsid, nsd->nsid_len);
-		}  else {
+		if(q->edns.opt_reserved_space == 0 || !buffer_available(
+			q->packet, 2+q->edns.opt_reserved_space)) {
 			/* fill with NULLs */
 			buffer_write(q->packet, edns->rdata_none, OPT_RDATA);
+		} else {
+			/* rdata length */
+			buffer_write_u16(q->packet, q->edns.opt_reserved_space);
+			/* edns options */
+			if(q->edns.nsid) {
+				/* nsid opt header */
+				buffer_write(q->packet, edns->nsid, OPT_HDR);
+				/* nsid payload */
+				buffer_write(q->packet, nsd->nsid, nsd->nsid_len);
+			}
 		}
 		ARCOUNT_SET(q->packet, ARCOUNT(q->packet) + 1);
 		STATUP(nsd, edns);
